@@ -1,3 +1,5 @@
+14Jun99=======================================================================
+1. changed IO::File in help and apropos to IO::File
 08Jun99=======================================================================
 1. Started work on the curses based operator console.
 03Jun99=======================================================================
